--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,7 +1,7 @@
-<div class="row" *ngIf="member">
+<div class="row">
   <div class="col-4">
     <div class="card">
-      <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
+      <img src="{{member?.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
           class="card-img-top img-thumbnail">
       <div class="card-body">
           <div class="mb-2" >
@@ -34,22 +34,22 @@
   </div>
   <div class="col-8">
     <tabset class="member-tabset" #memberTabs>
-        <tab heading='About {{member.knownAs}}'>
+        <tab heading='About {{member.knownAs}}' (selectTab)="onTabActivated($event)">
             <h4>Description</h4>
             <p>{{member.introduction}}</p>
             <h4>Looking for</h4>
             <p>{{member.lookingFor}}</p>
         </tab>
-        <tab heading='Interests'>
+        <tab heading='Interests' (selectTab)="onTabActivated($event)">
             <h4>Interests</h4>
             <p>{{member.interests}}</p>
         </tab>
-        <tab heading='Photos'>
+        <tab heading='Photos' (selectTab)="onTabActivated($event)">
             <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
                 style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
         </tab>
-        <tab heading='Messages'>
-            <app-member-messages [username]="member.username"></app-member-messages>
+        <tab heading='Messages' (selectTab)="onTabActivated($event)">
+            <app-member-messages [messages]="messages" [username]="member.username"></app-member-messages>
         </tab>
     </tabset>
 </div>
