--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,40 +1,36 @@
 <div class="card">
-  <div class="card-body"
-      #scrollMe
-      style="overflow: scroll; height: 535px;"
-      [scrollTop]="scrollMe.scrollHeight"
-  >
-      <div *ngIf="messages?.length === 0">
-          No messages yet... say hi by using the message box below
-      </div>
+  <div class="card-body">
+    <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
+      No messages yet... say hi by using the message box below
+    </div>
 
       <ul
-          *ngIf="messages?.length > 0"
-          class="chat">
-          <li *ngFor="let message of messages">
-              <div>
-                  <span class="chat-img float-end">
-                      <img class="rounded-circle" src="{{message.senderPhotoUrl || './assets/user.png'}}"
-                          alt="{{message.senderUsername}}">
+      *ngIf="(messageService.messageThread$ | async).length > 0"
+      class="chat">
+        <li *ngFor="let message of (messageService.messageThread$ | async)">
+          <div>
+            <span class="chat-img float-end">
+                <img class="rounded-circle" src="{{message.senderPhotoUrl || './assets/user.png'}}"
+                    alt="{{message.senderUsername}}">
+            </span>
+            <div class="chat-body">
+              <div class="header">
+                <small class="text-muted">
+                  <span class="fa fa-clock-o">{{message.messageSent | timeago}}</span>
+                  <span class="text-danger" *ngIf="!message.dateRead
+                    && message.senderUsername !== username">
+                    (unread)
                   </span>
-                  <div class="chat-body">
-                      <div class="header">
-                          <small class="text-muted">
-                              <span class="fa fa-clock-o">{{message.messageSent | timeago}}</span>
-                              <span class="text-danger" *ngIf="!message.dateRead
-                                  && message.senderUsername !== username">
-                                  (unread)
-                              </span>
-                              <span class="text-success" *ngIf="message.dateRead
-                                  && message.senderUsername !== username">
-                                  (read {{message.dateRead | timeago}})
-                              </span>
-                          </small>
-                      </div>
-                      <p>{{message.content}}</p>
-                  </div>
+                  <span class="text-success" *ngIf="message.dateRead
+                    && message.senderUsername !== username">
+                    (read {{message.dateRead | timeago}})
+                  </span>
+                </small>
               </div>
-          </li>
+              <p>{{message.content}}</p>
+            </div>
+          </div>
+        </li>
       </ul>
   </div>
 
